# real-python-course-bundle

./: .env.example  .gitignore  README.md  linter_checker.py  pyproject.toml
ch6/: invest.py
