[tool.poetry]
name = "real-python-course-bundle"
version = "0.1.0"
description = ""
authors = ["Cristian Javier Azulay <cjadeveloper@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
ipython = "^7.19.0"
black = "^20.8b1"
isort = "^5.6.4"
pre-commit = "^2.8.2"
pytest = "^6.1.2"
flakehell = "^0.7.0"
pylint = "^2.6.0"
flake8-builtins = "^1.5.3"
flake8-blind-except = "^0.1.1"

[tool.isort]
known_third_party = []
skip_gitignore = true
line_length = 119
src_paths = []
force_single_line = true
force_grid_wrap=0
atomic = true
include_trailing_comma = true
lines_between_types = 1
multi_line_output = 3
use_parentheses = true
#not_skip = "__init__.py"
skip_glob = ["*/setup.py"]
filter_files = true

[tool.black]
line-length = 119
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/.*/setup.py
  | \python-basics-exercises-master
)/
'''

[tool.flakehell]
# make output nice
format = "grouped"
# show line of source code in output
show_source = true
per_file_ignores = ["__init__.py:F401"]

[tool.flakehell.plugins]
# include everything in pyflakes except E501
pyflakes = ["+*", "-E501"]
flake8-blind-except = ["+*"]
flake8-builtins = ["+*"]
flake8-logging-format = ["+*"]
mccabe = ["+*"]
pycodestyle = ["+*"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
